--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "test:fast": "vitest run --project unit",
     "test:run": "vitest run",
     "typecheck": "nuxi typecheck",
+    "lint": "eslint . --fix",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.12.1",
     "@nuxt/test-utils": "^3.22.0",
+    "@nuxtjs/i18n": "^10.2.1",
     "eslint": "^9.39.2",
     "nuxt": "^4.2.2",
     "vue": "^3.5.26",
